[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = [
    "test"
]

[tool.black]
skip-string-normalization = true

[tool.isort]
profile = "black"

[tool.pylint.messages_control]
disable = [
    "too-many-ancestors",
    "missing-module-docstring"
]
generated-members = [
    "numpy.*",
    "torch.*",
    "dendropy.*"
]
