[metadata]
name = phylotorch
version = 1.0.0
url = https://github.com/4ment/phylotorch
author = Mathieu Fourment
author_email = mathieu.fourment@uts.edu.au
keywords = phylogenetics, variational, Bayes, pytorch
description = Phylogenetic inference with pytorch
long_description = file: README.md
license = GPL3
license_file = LICENSE
classifiers =
    Intended Audience :: Science/Research",
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering :: Bio-Informatics

[options]
python_requires = >=3.6
packages = find:
package_dir =
    =.
install_requires =
    dendropy
    numpy>=1.7
    torch>=1.9

[options.entry_points]
console_scripts =
    phylotorch = phylotorch.phylotorch:main

[options.extras_require]
dev =
    black
    flake8
    isort
    pylint
test =
    pytest

[flake8]
max-line-length = 88
ignore = E203, W503
